Style  - alteração nas cores do projeto e fonte

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item1">Conteúdo</a>
             <a class="cabecalho-menu-item2">Indicações de livros e filmes</a>
-            <a class="cabecalho-menu-item3">Comunidade Maira</a>
+            <a class="cabecalho-menu-item3">Comunidade PsiPositiva</a>
             <a class="cabecalho-menu-item4">Agende Comigo</a>
         </nav>
     </header>
@@ -26,14 +26,14 @@
 
         <section class="conteudo-central-primeiro">
             <div class="Conteudo-central-escrito">
-                <h1>Todo Mês,</h1>
-                <h3> Uma semana </h3>
-                <h3> com o melhor !</h3>
+                <h1>Toda Semana,</h1>
+                <h3> Uma terça-feira</h3>
+                <h3> com o melhor</h3>
                 <h3> da Psicologia Positiva para você!</h3>
 
                 <button class="botao">Confira</button>
             </div>
-            <img class="imagem-principal" src="imagemPrincipalL.png" alt="Imagem de moça sentada meditando">
+            <img class="imagem-principal" src="Não há um dia mais valioso do que hoje.png" alt="Imagem de moça sentada meditando">
         </section>
 
         <section class="conteudo-central-segundo">
